# srs-client

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cliff.toml
.github/workflows/: ci.yml
src/: callback_api.rs  http_api.rs
src/http_api/: summary.rs
tests/: test_http_api.rs
